# step_repos

./: README.md  pyproject.toml
document/manual/gitbush/: manual.md
document/manual/sqlserver/: manual.md
document/session/github_session_001/: github_session.md
document/session/github_session_001/pu/: stephp.pu
document/setting/gitbush/: install.md
document/setting/sqlserver/: install.md
pytest_sample/.github/workflows/: test.yml
pytest_sample/mod/: module_1.py
pytest_sample/src/: main.py
pytest_sample/tests/: test_main.py
pytest_sample/tests/mod/: test_module_1.py
training/2025-01_SQL/: problem01.md
training/2025-01_SQL/problem01/HirobumiNakamura/: ans_01.md
