[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pytest_sample"]
exclude = ["document", "training"]

[project]
name = 'pytest_sample'
requires-python = ">=3.13"
version = "1.0.0"
authors = [
    {name = "HirobumiNakamura", email = "nakamura@step-info.co.jp"},
]